# advent_of_code

./: .gitignore  README.md  pyproject.toml
src/advent_of_code/day1/: day1.py  input.txt
src/advent_of_code/day10/: day10.py
src/advent_of_code/day2/: day2.py
src/advent_of_code/day3/: DictList.py  day3.py  schematic_numbers.txt
src/advent_of_code/day4/: day4.py
src/advent_of_code/day5/: day5.py
src/advent_of_code/day6/: day6.py
src/advent_of_code/day7/: day7.py
src/advent_of_code/day8/: day8.py
src/advent_of_code/day9/: day9.py
src/advent_of_code/utils/: helpers.py
