[tool.poetry]
name = "advent_of_code"
version = "0.1.0"
description = "Collections of miscellaneous scripts and tools to collect, manage, and report metrics."
readme = "README.md"
authors = [
    "Jared Anderson <jared.anderson@tangocard.com>",
]

[tool.poetry.dependencies]
python = "^3.9"

jproperties = "2.1.1"
numpy = "1.25.2"
pyopenssl = "23.2.0"
pysocks = "1.7.1"
python-dotenv = "1.0.0"
pyyaml = "5.3.1"
requests = "2.31.0"
urllib3 = "1.26.16"
xmltodict = "0.13.0"
word2number = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
